# tictactoe

./: .gitignore  Board.hpp  CMakeLists.txt  DynamicArray.hpp  GameController.hpp  HashMap.hpp  MinimaxAI.hpp  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opening_tests.cpp
